--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "henry",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "pg": "^8.13.1"
